syntax = "proto3";

option java_package = "tukano.impl.grpc.generated_java";
option java_outer_classname = "BlobsProtoBuf";

service Blobs {

	rpc upload( UploadArgs ) returns ( UploadResult ) {}

	rpc download( DownloadArgs ) returns ( stream DownloadResult ) {}

	rpc delete( DeleteArgs ) returns ( DeleteResult ) {}

	rpc serverDownload( ServerDownloadArgs ) returns ( stream ServerDownloadResult ) {}

	rpc serverUpload( ServerUploadArgs ) returns ( ServerUploadResult ) {}
	
}

message UploadArgs {
	 string blobId = 1;
	 bytes data = 2;
}

message UploadResult {
}

message DownloadArgs {
	 string blobId = 1;
}

message DownloadResult {
	bytes chunk = 1;
}

message DeleteArgs {
	 string blobId = 1;
	 string token = 2;
}

message DeleteResult {}

message ServerDonwloadArgs {
	 string blobId = 1;
	 string token = 2;
}

message ServerUploadArgs {
	 string blobId = 1;
	 bytes data = 2;
	 string token = 3;
}

message ServerDownloadResult {
	bytes chunk = 1;
}

message ServerUploadResult {
}

